--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@tsconfig/react-native": "^3.0.2",
     "@types/jest": "^29.5.5",
     "@types/react": "^18.2.28",
+    "@types/react-native-vector-icons": "^6.4.15",
     "@types/react-test-renderer": "^18.0.3",
     "typescript": "^5.2.2"
   },
