--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "axios": "^1.5.1",
     "expo": "~49.0.13",
     "expo-status-bar": "~1.6.0",
+    "firebase": "^10.5.0",
     "react": "18.2.0",
     "react-native": "0.72.5",
+    "react-native-dotenv": "^3.4.9",
     "react-native-gesture-handler": "~2.12.0",
     "react-native-gifted-charts": "^1.3.10",
     "react-native-linear-gradient": "^2.8.3",
